All reproducers are working as expected