@@ -1,9 +1,7 @@
 package org.xvm.runtime;
 
-
 import java.io.ByteArrayOutputStream;
 import java.io.File;
-import java.io.OutputStream;
 import java.io.PrintStream;
 
 import java.lang.reflect.Field;
@@ -11,58 +9,50 @@ import java.lang.reflect.Field;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
+import java.util.ArrayList;
+
 import org.xvm.api.Connector;
 import org.xvm.api.InterpreterConnector;
 import org.xvm.api.LspSupport;
 import org.xvm.api.LspSupport.Control;
 
-import org.xvm.asm.ConstantPool;
 import org.xvm.asm.DirRepository;
 import org.xvm.asm.ErrorList;
 import org.xvm.asm.LinkedRepository;
 import org.xvm.asm.ModuleRepository;
 import org.xvm.asm.ModuleStructure;
 
-import org.xvm.util.Auto;
-
 /**
  * Run from the xvm directory after {@code ./gradlew installDist}:
  * <pre>{@code
- * java -ea --add-modules jdk.httpserver \
+ * java -ea --enable-native-access=javatools --add-modules jdk.httpserver,java.sql \
  *     -p ./xdk/build/install/xdk/javatools \
  *     --patch-module javatools=./javatools/build/classes/java/test \
  *     -m javatools/org.xvm.runtime.LspTest \
  *     ./xdk/build/install/xdk/lib ./xdk/build/install/xdk/javatools
  * }</pre>
+ *
+ * This test is a modification of the reproducer from
+ * <a href="https://github.com/xtclang/xvm/issues/543">issue 534</a>
  */
 public class LspTest {
     private static File dirLib;
     private static File dirJavatools;
     private static Path dirOut;
 
-    /** Tee of System.out, installed before any xvm class loads so the native console is captured. */
-    private static final ByteArrayOutputStream TEE = new ByteArrayOutputStream();
-
     static void main(String[] asArg) throws Exception {
-        PrintStream realOut = System.out;
-        System.setOut(new PrintStream(new OutputStream() {
-            @Override public void write(int b) { realOut.write(b); TEE.write(b); }
-            @Override public void write(byte[] b, int off, int len) {
-                realOut.write(b, off, len); TEE.write(b, off, len);
-            }
-        }, true));
-
         dirLib       = new File(asArg[0]);
         dirJavatools = new File(asArg[1]);
+
         Path dirWork = Files.createTempDirectory("xvm-543-repro");
         dirOut       = Files.createDirectory(dirWork.resolve("lib"));
         LspSupport.instance().configure(repo(), null);
 
         testCompile();
         testRun();
-//        reproA1_failureIsNotAttributable();
-//        reproA4_joinLatencyFloor();
-//        reproB1_sharedPoolGrowsUnbounded();
+        testRunException();
+        testRunLatency();
+        testPoolGrows();
     }
 
     private static void testCompile() {
@@ -94,96 +84,106 @@ public class LspTest {
             throw new IllegalStateException("run of Hello failed to start: " + errs.getErrors());
         }
 
+        await(control, "Hello");
+        if (!bytes.toString().contains("hello from Hello")) {
+            throw new IllegalStateException("run of Hello produced unexpected output: " + bytes);
+        }
+    }
+
+    // ----- a failed run reports its exception through the supplied console ----------------------
+
+    private static void testRunException() throws Exception {
+        String message = "deliberate failure the host must learn about";
+        ErrorList compileErrs = new ErrorList(25);
+        ModuleStructure module = LspSupport.instance().compile("""
+                module Crasher {
+                    void run() {
+                        @Inject Console console;
+                        console.print("Crasher.run about to throw");
+                        throw new IllegalState("%s");
+                    }
+                }
+                """.formatted(message), repo(), compileErrs);
+        if (module == null || compileErrs.hasSeriousErrors()) {
+            throw new IllegalStateException("compile of Crasher failed: " + compileErrs.getErrors());
+        }
+
+        ByteArrayOutputStream bytes = new ByteArrayOutputStream();
+        ErrorList runErrs = new ErrorList(25);
+        Control control = LspSupport.instance().run(
+                module, new PrintStream(bytes, true), null, null, runErrs);
+        if (control == null) {
+            throw new IllegalStateException("run of Crasher failed to start: " + runErrs.getErrors());
+        }
+
+        await(control, "Crasher");
+        String output = bytes.toString();
+        if (!output.contains(message)) {
+            throw new IllegalStateException("run of Crasher did not report its exception: " + output);
+        }
+    }
+
+    private static void await(Control control, String moduleName) throws Exception {
         long timeout = System.currentTimeMillis() + 10_000;
         while (control.running() && System.currentTimeMillis() < timeout) {
             Thread.sleep(10);
         }
         if (control.running()) {
             control.kill();
-            throw new IllegalStateException("run of Hello did not finish");
-        }
-        if (!bytes.toString().contains("hello from Hello")) {
-            throw new IllegalStateException("run of Hello produced unexpected output: " + bytes);
+            throw new IllegalStateException("run of " + moduleName + " did not finish");
         }
     }
 
-    // ----- A1: a failed run yields no failure object, only a bare int and a shared log line ------
+    // ----- a trivial run completes run very quickly ----------------------------------------------
 
-    private static void reproA1_failureIsNotAttributable() throws Exception {
-        compile("Crasher", """
-                module Crasher {
-                    void run() {
-                        @Inject Console console;
-                        console.print("Crasher.run about to throw");
-                        throw new IllegalState("deliberate failure the host must learn about");
-                    }
-                }
-                """);
-
-        InterpreterConnector connector = new InterpreterConnector(repo());
-        connector.loadModule("Crasher");
-        connector.start(null);
-        try (Auto ignore = ConstantPool.withPool(connector.getConstantPool())) {
-            connector.invoke0(connector.findMethods("run").iterator().next());
-        }
-        int result = connector.join();
-
-        // the run threw, yet join() returns only an int: no exception, no cause chain, no object
-        // attributable to THIS request. The failure surfaced only as text on a shared stream
-        // (printed above). In a host multiplexing requests, that log line cannot be linked back
-        // to the invocation that failed.
-        boolean sawExceptionOnSharedStream = TEE.toString().contains("Unhandled exception");
-        System.out.println("REPRO A1: run() threw; join() returned only int=" + result
-                + "; no failure object / cause / request attribution."
-                + " (failure appeared only on the shared stream: " + sawExceptionOnSharedStream + ")");
-    }
-
-    // ----- A4: join() imposes a ~500ms latency floor ---------------------------------------------
-
-    private static void reproA4_joinLatencyFloor() throws Exception {
+    private static void testRunLatency() throws Exception {
         compile("Quick", helloModule("Quick"));
-        InterpreterConnector connector = new InterpreterConnector(repo());
-        connector.loadModule("Quick");
-        connector.start(null);
 
-        long t0 = System.nanoTime();
-        try (Auto ignore = ConstantPool.withPool(connector.getConstantPool())) {
-            connector.invoke0(connector.findMethods("run").iterator().next());
+        LspSupport support = LspSupport.instance();
+        for (int run = 1; run <= 5; run++) {
+            ByteArrayOutputStream bytes = new ByteArrayOutputStream();
+            ErrorList errs = new ErrorList(25);
+            Control control = support.run(
+                    repo(), "Quick", null, new PrintStream(bytes, true), null, null, null, errs);
+            if (control == null) {
+                throw new IllegalStateException(
+                        "run " + run + " of Quick failed to start: " + errs.getErrors());
+            }
+
+            long t0 = System.nanoTime();
+            await(control, "Quick " + run);
+            long elapsedMillis = (System.nanoTime() - t0) / 1_000_000;
+
+            if (errs.hasSeriousErrors()) {
+                throw new IllegalStateException(
+                        "run " + run + " of Quick failed: " + errs.getErrors());
+            }
+            if (!bytes.toString().contains("hello from Quick")) {
+                throw new IllegalStateException(
+                        "run " + run + " of Quick produced unexpected output: " + bytes);
+            }
+            System.out.println("testRunLatency run " + run + ": observed completion in "
+                    + elapsedMillis + "ms");
         }
-        connector.join();
-        long ms = (System.nanoTime() - t0) / 1_000_000;
-
-        System.out.println("REPRO A4: a trivial run took " + ms + "ms wall-clock; join()'s 500ms "
-                + "sleep-poll dominates (a per-cycle latency floor)"
-                + (ms >= 400 ? "" : " [unexpectedly fast this run]"));
     }
 
-    // ----- B1: the shared native pool grows for every novel type and never evicts ----------------
+    // ----- check the shared native pool growth ---------------------------------------------------
 
-    private static void reproB1_sharedPoolGrowsUnbounded() throws Exception {
+    private static void testPoolGrows() throws Exception {
         LspSupport support = LspSupport.instance();
-        StringBuilder trace = new StringBuilder();
-        int prev  = support.getConstantPool().size();
-        trace.append(prev);
-        boolean everGrew = false, everShrank = false;
+        ErrorList  errs    = new ErrorList(256);
 
         // each run uses a DISTINCT core parameterized-type combination, so each interns novel
         // constants into the shared native plane - the "many different generic shapes over one
         // long session" case
-        for (int i = 0; i < 20; i++) {
+        for (int i = 0; i <= 12; i++) {
             compile("Grow" + i, growthModule("Grow" + i, ELEM_TYPES[i % ELEM_TYPES.length]));
-            runOnce(support, "Grow" + i);
-            int now = nativePoolSize(support.ensureConnector());
-            trace.append(" -> ").append(now);
-            everGrew   |= now > prev;
-            everShrank |= now < prev;
-            prev = now;
-        }
 
-        System.out.println("REPRO B1: shared native ConstantPool size across runs: " + trace
-                + (everGrew && !everShrank
-                        ? "  (only ever grows, never shrinks - unbounded over a hot session)"
-                        : "  (unexpected: grew=" + everGrew + " shrank=" + everShrank + ")"));
+            support.run(repo(), "Grow" + i, null, null, null, null, null, errs);
+
+            int size = nativePoolSize(support.ensureConnector());
+            System.out.println("testPoolGrows run " + i + ": ConstantPool size = " + size);
+        }
     }
 
     // ----- helpers -------------------------------------------------------------------------------
@@ -203,12 +203,6 @@ public class LspTest {
         throw new UnsupportedOperationException("TODO: add JitConnector scenario");
     }
 
-    private static void runOnce(LspSupport support, String moduleName) {
-        ErrorList errs    = new ErrorList(256);
-        Control   control = support.run(repo(), moduleName, null, System.out, /*root*/null,
-                /*injections*/null, /*custom*/null, errs);
-    }
-
     private static String helloModule(String moduleName) {
         return """
                 module %s {
@@ -226,8 +220,6 @@ public class LspTest {
                     void run() {
                         Map<String, %s> m = new HashMap();
                         Array<Map<%s, String>> nested = new Array();
-                        @Inject Console console;
-                        console.print(m.size.toString() + nested.size.toString());
                     }
                 }
                 """).formatted(moduleName, elem, elem);
@@ -247,7 +239,7 @@ public class LspTest {
     }
 
     private static ModuleRepository repo() {
-        var list = new java.util.ArrayList<ModuleRepository>();
+        var list = new ArrayList<ModuleRepository>();
         for (File dir : new File[] {dirOut.toFile(), dirLib, dirJavatools}) {
             if (dir != null && dir.isDirectory()) {
                 list.add(new DirRepository(dir, true));
@@ -257,5 +249,4 @@ public class LspTest {
                 ? list.get(0)
                 : new LinkedRepository(list.toArray(ModuleRepository.NO_REPOS));
     }
-
 }
